--- a/xobyz-main/string/dowodnowy.html
+++ b/xobyz-main/string/dowodnowy.html
@@ -202,12 +202,12 @@ body, html {
 <body class="">
     
     <header>
-        <a href="dashboard.html"><img src="dowod_files/pozdro.svg" alt="leftarrow"></a>
+        <a href="dashboard.html"><img src="/pozdro.svg" alt="leftarrow"></a>
         <span style="font-family: 'Inter'; font-weight: 900; position: relative; left: -6%;">mDowód</span>
-         <img style="width: 25px; height: 25px;" src="dowod_files/madziamojakotka123.svg" alt="">
+         <img style="width: 25px; height: 25px;" src="/madziamojakotka123.svg" alt="">
     </header>
     <p class="czas">Czas: 20:32:33 15.05.2024</p>
-    <script src="dowod_files/timenew.js"></script>
+    <script src="/timenew.js"></script>
     <main>
         <section id="lew">
     <!-- ...existing code... -->
@@ -218,7 +218,7 @@ body, html {
              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1;" 
              alt="Profile Photo">
         <img class="photo-border" 
-             src="dowod_files/szmata.png" 
+             src="/szmata.png" 
              style="position: relative; z-index: 2;" 
              alt="">
     </div>
@@ -298,7 +298,7 @@ document.getElementById("display-pesel").innerText = localStorage.getItem("pesel
         </script>
     </main>
     <section id="bottom">
-        <img src="https://sb987c4zjvju65987b.ct8.pl/dowod_files/checkmark.svg" alt="checkmark">
+        <img src="https://sb987c4zjvju65987b.ct8.pl/dowod_files/checkmark.jpg" alt="checkmark">
         <p>Dokument ważny</p>
     </section>
     <a class="buto" style="cursor: pointer; display: flex; align-items: center; padding: 40px 20px ; border-radius: 10px; background-color: white; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
