--- a/xobyz-main/string/dowodnowy.html
+++ b/xobyz-main/string/dowodnowy.html
@@ -202,12 +202,12 @@ body, html {
 <body class="">
     
     <header>
-        <a href="dashboard.html"><img src="/pozdro.svg" alt="leftarrow"></a>
+        <a href="dashboard.html"><img src="dowod_files/pozdro.svg" alt="leftarrow"></a>
         <span style="font-family: 'Inter'; font-weight: 900; position: relative; left: -6%;">mDowód</span>
-         <img style="width: 25px; height: 25px;" src="/madziamojakotka123.svg" alt="">
+         <img style="width: 25px; height: 25px;" src="dowod_files/madziamojakotka123.svg" alt="">
     </header>
     <p class="czas">Czas: 20:32:33 15.05.2024</p>
-    <script src="/timenew.js"></script>
+    <script src="dowod_files/timenew.js"></script>
     <main>
         <section id="lew">
     <!-- ...existing code... -->
@@ -218,7 +218,7 @@ body, html {
              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1;" 
              alt="Profile Photo">
         <img class="photo-border" 
-             src="/szmata.png" 
+             src="dowod_files/szmata.png" 
              style="position: relative; z-index: 2;" 
              alt="">
     </div>
@@ -238,6 +238,15 @@ body, html {
               <img src="dowod_files/godlo.gif" alt="godlo" id="godlo">
 
               <script>
+                // Załaduj zdjęcie z localStorage, jeśli istnieje
+                window.onload = function () {
+                    const savedPhoto = localStorage.getItem("photo");
+                    if (savedPhoto) {
+                        const userPhoto = document.getElementById("user-photo");
+                        userPhoto.src = savedPhoto;  // Ustaw zapisane zdjęcie
+                    }
+                };
+                </script>
                 // Załaduj zdjęcie z localStorage, jeśli istnieje
                 window.onload = function () {
                     const savedPhoto = localStorage.getItem("photo");
