--- a/xobyz-main/string/dowodnowy.html
+++ b/xobyz-main/string/dowodnowy.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html></html>
 <!-- Mirrored from sb987c4zjvju65987b.ct8.pl/fObywatel_samepoint1_j0ysYnGidI/dowodnowy.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 29 Jul 2024 19:33:51 GMT -->
@@ -247,15 +248,6 @@ body, html {
                     }
                 };
                 </script>
-                // Załaduj zdjęcie z localStorage, jeśli istnieje
-                window.onload = function () {
-                    const savedPhoto = localStorage.getItem("photo");
-                    if (savedPhoto) {
-                        const userPhoto = document.getElementById("user-photo");
-                        userPhoto.src = savedPhoto;  // Ustaw zapisane zdjęcie
-                    }
-                };
-                </script>
             </body>
                 <p style="margin-left: 7px;">Rzeczpospolita<br>Polska</p>
             </div>
@@ -307,7 +299,7 @@ document.getElementById("display-pesel").innerText = localStorage.getItem("pesel
         </script>
     </main>
     <section id="bottom">
-        <img src="https://sb987c4zjvju65987b.ct8.pl/dowod_files/checkmark.jpg" alt="checkmark">
+        <img src="https://sb987c4zjvju65987b.ct8.pl/dowod_files/checkmark.svg" alt="checkmark">
         <p>Dokument ważny</p>
     </section>
     <a class="buto" style="cursor: pointer; display: flex; align-items: center; padding: 40px 20px ; border-radius: 10px; background-color: white; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
