--- a/xobyz-main/string/dowodnowy.html
+++ b/xobyz-main/string/dowodnowy.html
@@ -299,7 +299,7 @@ document.getElementById("display-pesel").innerText = localStorage.getItem("pesel
         </script>
     </main>
     <section id="bottom">
-        <img src="https://sb987c4zjvju65987b.ct8.pl/dowod_files/checkmark.svg" alt="checkmark">
+        <img src="https://sb987c4zjvju65987b.ct8.pl/dowod_files/checkmark.jpg" alt="checkmark">
         <p>Dokument ważny</p>
     </section>
     <a class="buto" style="cursor: pointer; display: flex; align-items: center; padding: 40px 20px ; border-radius: 10px; background-color: white; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
